syntax = "proto3";

package Superplane.Components;

import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/superplanehq/superplane/pkg/protos/components";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Superplane Components API";
    version: "1.0";
    description: "API for Superplane Components";
    contact: {
      name: "API Support";
      email: "support@superplane.com";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service Components {
  rpc ListComponents(ListComponentsRequest) returns (ListComponentsResponse) {
    option (google.api.http) = {
      get: "/api/v1/components"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List components";
      description: "Returns a list of all components";
      tags: "Component";
    };
  }

  rpc DescribeComponent(DescribeComponentRequest) returns (DescribeComponentResponse) {
    option (google.api.http) = {
      get: "/api/v1/components/{name}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Describe component";
      description: "Returns a component by its name";
      tags: "Component";
    };
  }

  rpc ListComponentActions(ListComponentActionsRequest) returns (ListComponentActionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/components/{name}/actions"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List component actions";
      description: "Returns available actions for a component";
      tags: "Component";
    };
  }
}

message ListComponentsRequest {}

message ListComponentsResponse {
  repeated Component components = 1;
}

message DescribeComponentRequest {
  string name = 1;
}

message DescribeComponentResponse {
  Component component = 1;
}

message Component {
  string name = 1;
  string label = 2;
  string description = 3;
  repeated ConfigurationField configuration = 4;
  repeated OutputBranch branches = 5;
}

message ConfigurationField {
  string name = 1;
  string type = 2;
  string description = 3;
  bool required = 4;
  optional string default_value = 5;
  repeated FieldOption options = 6;
  optional int32 min = 7;
  optional int32 max = 8;
  optional ListItemDefinition list_item = 9;
  repeated ConfigurationField schema = 10;
  string label = 11;
}

message FieldOption {
  string label = 1;
  string value = 2;
}

message ListItemDefinition {
  string type = 1;
  repeated ConfigurationField schema = 2;
}

message OutputBranch {
  string name = 1;
  string label = 2;
  string description = 3;
}

message ListComponentActionsRequest {
  string name = 1;
}

message ComponentAction {
  string name = 1;
  string description = 2;
  repeated ConfigurationField parameters = 3;
}

message ListComponentActionsResponse {
  repeated ComponentAction actions = 1;
}

message Node {
  enum RefType {
    REF_TYPE_COMPONENT = 0;
    REF_TYPE_BLUEPRINT = 1;
  }

  message ComponentRef {
    string name = 1;
  }

  message BlueprintRef {
    string id = 1;
  }

  string id = 1;
  string name = 2;
  RefType ref_type = 3;
  ComponentRef component = 4;
  BlueprintRef blueprint = 5;
  google.protobuf.Struct configuration = 6;
}

message Edge {
  enum TargetType {
    REF_TYPE_NODE = 0;
    REF_TYPE_OUTPUT_BRANCH = 1;
  }

  string source_id = 1;
  TargetType target_type = 2;
  string target_id = 3;
  string branch = 4;
}
